--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ app.db_save*
 *plots*
 /db_csv
 /precomputed_features
+/precomputed_features_cons_nozero
 /results_metric
 /features/consonance_statistics
 /features/consonance_statistics_no_empty_chords
