--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ app.db_save*
 *runs*
 *plots*
 /db_csv
-/precomputed_features
+/precomputed_features*
 /results_metric
 /features/consonance_statistics
 /features/consonance_statistics_no_empty_chords
