fix script + add F-measure between the two transcriptions in the analysis (as comment only)

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ app.db_save*
 *plots*
 /db_csv
 /precomputed_features*
-/results_metric
+*results_metric
 /features/consonance_statistics
 /features/consonance_statistics_no_empty_chords
 /features/chords_and_times
